--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:site_name" content="Paras Motor Workshop">
   <meta property="og:title" content="Paras Motor Workshop | Car Repair and Maintenance">
   <meta property="og:description" content="Car Repair and Maintenance">
-  <meta property="og:image" content="https://parasmotors.vercel.app/src/assets/images/live.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/localhostbabul/paras-motors/refs/heads/main/src/assets/images/live.jpg">
   <title>Paras Motor Workshop | Car Repair and Maintenance</title>
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon.ico">
